# APIRestDesk

./: .gitignore  README.md  build_wheel.bat  build_wheel.sh  launch_api_rest_desk.py  pyproject.toml  requirements.txt
api_rest_desk/: __init__.py  __main__.py  config.py  exceptions.py  http_client.py  i18n.py  main_window.py  models.py  settings.py  settings_dialog.py  storage.py  theme.py  toast.py  widgets.py  workers.py  workflow.py  workflow_canvas.py  workflow_dialog.py
