[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-rest-desk"
authors = [
    { name = "GiancaGIS" }
]
license = { text = "MIT" }
version = "1.0.2"
description = "Desktop REST client built with PyQt6."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyQt6==6.11.0",
    "PyQt6.sip>=13.11.1",
    "httpx==0.28.1",
]

[project.scripts]
api-rest-desk = "api_rest_desk.__main__:main"

[tool.setuptools]
packages = ["api_rest_desk"]
